# hestia-import

./: .gitignore  README.md  pyproject.toml
docs/: mail-password-migration.md
src/hestia_import/: archive_extractor.py  backup_archive.py  cli.py  models.py  parser.py  planner.py
src/hestia_import.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/hestia_import/commands/: analyze.py  doctor.py  execute.py  plan.py
src/hestia_import/executor/: hestia.py  runner.py
src/hestia_import/hestia/: client.py  inspector.py
src/hestia_import/mail/: account_restore.py  maildir.py  passwords.py
src/hestia_import/readers/: mail.py  mysql.py  userdata.py
src/hestia_import/tasks/: mail.py
