[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hestia-import"
version = "0.1.0"
description = "Importador de backups cPanel hacia HestiaCP"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0"
]

[project.scripts]
hestia-import = "hestia_import.cli:app"
